docs: describe how a vector store can be built and traced

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
+OTEL_SERVICE_NAME="demo"
+OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED=true
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT="http://localhost:4317"
+OTEL_EXPORTER_OTLP_TRACES_INSECURE="true"
+OTEL_BSP_MAX_EXPORT_BATCH_SIZE=5
+
 OPENAI_API_KEY="sk-mysecret"
